修改连续 上传

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,112 +31,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="20dp"
-                android:text="下载leave_1" />
+                android:text="测试下载错的url" />
 
-            <TextView
-                android:id="@+id/down_video_2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_2" />
-
-            <TextView
-                android:id="@+id/down_video_3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_3" />
-
-            <TextView
-                android:id="@+id/down_video_4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_4" />
-
-
-            <TextView
-                android:id="@+id/down_video_5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_5" />
-
-            <TextView
-                android:id="@+id/down_video_6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_6" />
-
-            <TextView
-                android:id="@+id/down_video_6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_6" />
-
-            <TextView
-                android:id="@+id/down_video_6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_6" />
-
-            <TextView
-                android:id="@+id/down_video_7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_7" />
-
-            <TextView
-                android:id="@+id/down_video_8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_8" />
-
-            <TextView
-                android:id="@+id/down_video_9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_9" />
-
-            <TextView
-                android:id="@+id/down_video_10"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_10" />
-
-            <TextView
-                android:id="@+id/down_video_11"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_11" />
-
-            <TextView
-                android:id="@+id/down_video_12"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="下载leave_12" />
         </LinearLayout>
     </ScrollView>
 
